admin utils api

--- a/todo.txt
+++ b/todo.txt
@@ -2,3 +2,8 @@ admin utils
 
 хендлеры событий
 
+Проверть если файл слишком большой сразу после выбора
+
+Переводы. Стандартные - в коде, кастомные в бд. И грузить их в памать. Гет ланг. Метод возвращающий кастомные переводы.
+
+Юзеру поле языка с 0 по умолчанию. Язык стстемы.
