submit logic fixes

--- a/todo.txt
+++ b/todo.txt
@@ -6,12 +6,13 @@ postData move to promises
 
 replace callsCount
 
+создание всех типов полей
+отображение всех типов
+проверить отправку всех полей
+
+регистрация/активация/логин/сброс формы (через ноды, которые не хранят свои данные а только обрабатывают хендлеры)
 
 separate server side and client side isUserHaveRole
-
-cleanup bind(this) replace with => functions
-
-find all Boolean fields and cleanup related code to non text values
 
 Проверть если файл слишком большой сразу после выбора
 
@@ -19,7 +20,6 @@ find all Boolean fields and cleanup related code to non text values
 
 Юзеру поле языка с 0 по умолчанию. Язык стстемы.
 
-
 Maintenance mode ansver immideatelly with special code and client will resend request later.Count current requests in progress. And stop after zero only.
 
-remove "use strict" from client
+проверить сессии на глючность
