events handlers added

--- a/todo.txt
+++ b/todo.txt
@@ -1,20 +1,26 @@
-проверить fieldsRefs создается ли до конструкторв
 хендлеры событий
+переименовать pre  post
+в UPDATE передавать fullNewData?
+
+
+
+создание всех типов полей
+отображение всех типов
+проверить отправку всех полей
+
+search brokes react
 
 getData
 postData move to promises
 
 replace callsCount
 
-создание всех типов полей
-отображение всех типов
-проверить отправку всех полей
 
 регистрация/активация/логин/сброс формы (через ноды, которые не хранят свои данные а только обрабатывают хендлеры)
 
 separate server side and client side isUserHaveRole
 
-Проверть если файл слишком большой сразу после выбора
+добавить данные о настройках сервера в getTree (проверить все TODO)
 
 Переводы. Стандартные - в коде, кастомные в бд. И грузить их в памать. Гет ланг. Метод возвращающий кастомные переводы.
 
@@ -26,4 +32,9 @@ Maintenance mode ansver immideatelly with special code and client will resend re
 
 убрать <a href="/login
 
+запретить подчеркивания не в начале названия поля. чтобы _en не добавили.
+запретить подчеркивание в названии таблиц
+
 crop падает на прозрачной области. когда кроп больше картинки
+
+в релизе CodeMirror импортировать по другому
