fields creation fix

--- a/todo.txt
+++ b/todo.txt
@@ -15,6 +15,7 @@ postData move to promises
 
 replace callsCount
 
+модальные формы для редактирования админских вещей. (admin.popup заменить)
 
 регистрация/активация/логин/сброс формы (через ноды, которые не хранят свои данные а только обрабатывают хендлеры)
 
