fields creation fixes

--- a/todo.txt
+++ b/todo.txt
@@ -1,16 +1,13 @@
-иконки default ''
-
-
-хендлеры событий
-переименовать pre  post
-в UPDATE передавать fullNewData?
-
-скрывать maxlen где ненадо
-
 
 создание всех типов полей
 отображение всех типов
 проверить отправку всех полей
+
+создание всех видов разделов.
+
+переименовать pre  post
+в UPDATE передавать fullNewData?
+
 
 
 search brokes react
@@ -53,3 +50,7 @@ crop падает на прозрачной области. когда кроп 
 shake alerts on аppearing
 
 w h поля для картинки
+
+в разделе добавить выбор ссылки на _html
+
+captcha
