options rename to ENV

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,9 @@
 проверить 1toM inlineEditable
 
+Check editable fields visible before prehandler, but alliow to set them all in handlers. Check data for unknown fields in debug
+Скрыть icon,selectFieldName поле фиелдс таким рбразоми 
+
+
 создание всех типов полей
 отображение всех типов
 проверить отправку всех полей
@@ -7,7 +11,9 @@
 создание всех видов разделов.
 по умолчанию сортировать старые в конце
 
-переименовать pre  post
+проверить все TODO
+
+переименовать pre post
 в UPDATE передавать fullNewData?
 
 
@@ -16,12 +22,9 @@ search brokes react
 
 getData
 postData move to promises
-
-code editor не ескейпить добавить __noescape field in to request and use it in src sendRemove all \r symbols before send and in alll sources
-
 replace callsCount
 
-Save subform on save parent form when edit enum entry. check if subform valid
+code editor не ескейпить добавить __noescape field in to request and use it in src sendRemove all \r symbols before send and in alll sources
 
 Hide enum value parent field if it subform
 
@@ -34,13 +37,9 @@ Make selenium tests
 
 separate server side and client side isUserHaveRole
 
-добавить данные о настройках сервера в getTree (проверить все TODO)
-
 Переводы. Стандартные - в коде, кастомные в бд. И грузить их в памать. Гет ланг. Метод возвращающий кастомные переводы.
 
 Юзеру поле языка с 0 по умолчанию. Язык стстемы.
-
-Maintenance mode ansver immideatelly with special code and client will resend request later.Count current requests in progress. And stop after zero only.
 
 проверить сессии на глючность
 
@@ -49,22 +48,17 @@ Maintenance mode ansver immideatelly with special code and client will resend re
 запретить подчеркивания не в начале названия поля. чтобы _en не добавили.
 запретить подчеркивание в названии таблиц
 
-Check editable fields visible before prehandler, but alliow to set them all in handlers. Check data for unknown fields in debug
-Скрыть icon,selectFieldName поле фиелдс таким рбразоми 
-
 Combine sqls in field edit. Node edit.
 
 crop падает на прозрачной области. когда кроп больше картинки
 
 в релизе CodeMirror импортировать по другому
 
-требовать nodeRef поле если указано nodeRef === FIELD_7_Nto1
+требовать nodeRef поле если указано fieldType === FIELD_7_Nto1 15 14
 
 try mysql.createPool
 
 shake alerts on аppearing
-
-w h поля для картинки
 
 в разделе добавить выбор ссылки на _html
 
