--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,4 @@
-([A-Z])
--\l$1
-
-
-Add classes for all elements. Move styles to css.
-
-Make selenium tests
+Make selenium tests for basic operations
 
 модальные формы для редактирования админских вещей. (admin.popup заменить)
 
