--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,13 @@
 
+Replace all Promise with global DPromise without try catch. Add webpack loader which will replace promises in generators to DPromise
+
+Check handlers and make fields handlers
 
 Make selenium tests for basic operations
+
+Separate FormEvents and CustomFormEvents. Call both of them.
+
+Events editor just create method and open it to edit at line num we want.
 
 модальные формы для редактирования админских вещей. (admin.popup заменить)
 
