--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,5 @@
+left bar current highlight
 
-модальные формы для редактирования админских вещей. (popup заменить)
-
-Make selenium tests for basic operations
 
 регистрация/активация/логин/сброс формы (через ноды, которые не хранят свои данные а только обрабатывают хендлеры)
 
