--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,11 @@
-left bar current highlight
 
+left bar current tab highlight
+
+declare all globals "declare global"
+
+редактирование лукап значения в попапе. не ренедерить в поле
+
+this.setState сделать по условию если стейт не уже такой.
 
 регистрация/активация/логин/сброс формы (через ноды, которые не хранят свои данные а только обрабатывают хендлеры)
 
