1 to N edit in popup

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,14 @@
 
 редактирование лукап значения в попапе. не ренедерить в поле
 
-this.setState сделать по условию если стейт не уже такой.
+хоткей esc для cancel в форме и попапе
+хткей Enter для удаления
+
+savedNode можно выпилить?
+
+скрывать админские контролы в перекрытой форме
+
+админские контрола в модалах пофиксить
 
 регистрация/активация/логин/сброс формы (через ноды, которые не хранят свои данные а только обрабатывают хендлеры)
 
