--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,13 @@
 
-редактирование лукап значения в попапе. не ренедерить в поле
+рестрикт удаления/редактирования через глобальный массив в ‘Jones’
+{
+	57: {
+		1:true,
+		2: true,
+	}
+
+}
+
 
 хоткей esc для cancel в форме и попапе
 хткей Enter для удаления
