--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,4 @@
-
-рестрикт удаления/редактирования через глобальный массив в ‘Jones’
-{
-	57: {
-		1:true,
-		2: true,
-	}
-
-}
-
+savedNode можно выпилить?
 
 хоткей esc для cancel в форме и попапе
 хткей Enter для удаления
