multilanguage checking prepare

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,5 @@
-separate server side and client side isUserHaveRole
 
-Переводы. Стандартные - в коде, кастомные в бд. И грузить их в память. Гет ланг. Метод возвращающий кастомные переводы.
+проверить мультиязычность
 
 Юзеру поле языка с 0 по умолчанию. Язык системы.
 
@@ -24,9 +23,17 @@ Lookup nto1 and ntom to user gives access for user if field marked as access ope
 
 проверить все TODO
 
+
 регистрация/активация/логин/сброс формы (через ноды, которые не хранят свои данные а только обрабатывают хендлеры)
 
 просить вход если ответ нет прав и юзер гость
+
+портировать Linemaster
+
+кастомные Переводы.
+
+кастомные евент хендлеры в добавок имеющимся
+
 
 Linemaster list. render items one by one with delay
 
