--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,8 @@
 
 проверить мультиязычность
 
+не выбирать значения для поля lang если у юзера не вкл мультиязычность.
+
 Юзеру поле языка с 0 по умолчанию. Язык системы.
 
 проверить сессии на глючность
