use "import type"

--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,15 @@
 
+проверить добалвение мультиязычного поля
+
+проверить преобразование поля в мультиязычное и обратно
+
 language add ui field to retrevie code from. Filter user lang by ui not empty only. Add filter type ui onlyU=name user lang field ad ui lang
+
+очистить базу от мультиязычности. удалть язык и колонки из таблиц. откл. мультиязычность.
 
 проверить сессии на глючность
 
-видимость полей в поле и ноде пересчет сделать попольно
+видимость полей в разделе и поле пересчет сделать попольно
 
 убрать <a href="/login
 
@@ -21,8 +27,9 @@ Lookup nto1 and ntom to user gives access for user if field marked as access ope
 
 проверить все TODO
 
-
 регистрация/активация/логин/сброс формы (через ноды, которые не хранят свои данные а только обрабатывают хендлеры)
+
+найти все ссылки на /reset /login /register и заменить на показ форм
 
 просить вход если ответ нет прав и юзер гость
 
