default filter is not required fix

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-поиск в лукапах сбивает курсор и закрыввает дроплист
+add refs to tabs in to props.form.fieldsRefs[props.field.fieldName] = this;
 
 очистить базу от мультиязычности. удалть язык и колонки из таблиц. откл. мультиязычность.
 
