multilang rename to multilingual

--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,16 @@
-add refs to tabs in to props.form.fieldsRefs[props.field.fieldName] = this;
-
 очистить базу от мультиязычности. удалть язык и колонки из таблиц. откл. мультиязычность.
 
-проверить сессии на глючность
+документы nostore
 
-видимость полей в разделе и поле пересчет сделать попольно
+регистрация/активация/логин/сброс формы (через ноды, которые не хранят свои данные а только обрабатывают хендлеры)
+
+найти все ссылки на /reset /login /register и заменить на показ форм
 
 убрать <a href="/login
+
+просить вход если ответ нет прав и юзер гость
+
+видимость полей в разделе и поле пересчет сделать попольно
 
 crop падает на прозрачной области. когда кроп больше картинки
 
@@ -22,11 +26,7 @@ Lookup nto1 and ntom to user gives access for user if field marked as access ope
 
 проверить все TODO
 
-регистрация/активация/логин/сброс формы (через ноды, которые не хранят свои данные а только обрабатывают хендлеры)
-
-найти все ссылки на /reset /login /register и заменить на показ форм
-
-просить вход если ответ нет прав и юзер гость
+проверить сессии на глючность
 
 портировать Linemaster
 
