--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 очистить базу от мультиязычности. удалть язык и колонки из таблиц. откл. мультиязычность.
 
-документы nostore
+документы noStore
 
 регистрация/активация/логин/сброс формы (через ноды, которые не хранят свои данные а только обрабатывают хендлеры)
 
