recreate form on node.id or recId change

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,13 @@
-смена id редактируемого юзера ломает форму
+
+выгрузить бызу без мультияыка.
+загрузить с мультиязыком
+isUI галочку в язык. UI path удалть
+в нодах и полях создавать только поля с этой галочкой.
+обкатать механизм.
+загрузить базу без мультиязыка
+
+
+
 
 документы noStore
 
