multilingual restrictions and improvements

--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,7 @@
 
-выгрузить бызу без мультияыка.
-загрузить с мультиязыком
-isUI галочку в язык. UI path удалть
-в нодах и полях создавать только поля с этой галочкой.
-обкатать механизм.
-загрузить базу без мультиязыка
+Фильтры на клиент слать без sql. Проверять наличие фильтра по массиву в ноде а контент брать из глобального массива.
 
-
-
+Параметры модалок слать в шарп Удбрать r n  ?
 
 документы noStore
 
@@ -37,11 +31,14 @@ Lookup nto1 and ntom to user gives access for user if field marked as access ope
 
 проверить сессии на глючность
 
+Попробовать пофиксить tsc билд без вебпака. импортить по другому?
+
 портировать Linemaster
 
 кастомные Переводы.
 
 кастомные евент хендлеры в добавок имеющимся
+
 
 
 Linemaster list. render items one by one with delay
