--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,8 @@
 
 fix all typos
 
+сейв в модале переоткрывает его. удалять из хеша при закрытии.
+
 документы noStore
 
 регистрация/активация/логин/сброс формы (через ноды, которые не хранят свои данные а только обрабатывают хендлеры)
