db before fields rename

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,6 @@
+Переименовать все поля и таблицы?  Выгрузить бд и глобальной заменой. Убрать www из исключений в серверной папке проекте
+
+Rename _linker to _$_linker
 
 fix all typos
 
