--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,16 @@
+Вместо колбека добавить клиентское событие афтер сейв
+
+onSaveCallback удалить
+
+проверить сохранение рич едитора
 
 документы noStore
 
+все поля noStore для нод с noStoreForms
+
 регистрация/активация/логин/сброс формы (через ноды, которые не хранят свои данные а только обрабатывают хендлеры)
+
+logout апи вызывать при показе логин формы
 
 найти все ссылки на /reset /login /register и заменить на показ форм
 
