left bar cleanup localization cleanup

--- a/todo.txt
+++ b/todo.txt
@@ -1,21 +1,15 @@
-регистрация и сброс проверены. Включить отправку ошибок и проверить истекшие ссылки. Как ошибки на клиент показываются.
+почистить код leftBar от проверок на особые айтемы (текст и тд)
 
-Табы рендерить вверху формы не слева
 
+Стилизовать табы вверху формы
+
+закомитить все и переименовать js папки в src на клиенте и сервере
 
 после сохранения не попает историю а добавляет в конец
 
-найти все ссылки на /reset /login /register и заменить на показ форм
-
-/#n/22  /#n/20/r/new/e    /#n/21
-
-
-
-убрать <a href="/login
-
 просить вход если ответ нет прав и юзер гость
 
-видимость полей в разделе и поле пересчет сделать попольно
+видимость полей в формах "раздел" и "поле" пересчет сделать попольно
 
 crop падает на прозрачной области. когда кроп больше картинки
 
@@ -31,11 +25,13 @@ Lookup nto1 and ntom to user gives access for user if field marked as access ope
 
 проверить все TODO
 
-удалить неиспользуемые переводы
-
 проверить сессии на глючность
 
 Попробовать пофиксить tsc билд без вебпака. импортить по другому?
+
+сделать деплой релизного билда.
+
+проверить обработку и показ ошибок в релизном билде клиента и бека.
 
 портировать Linemaster
 
