--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,9 @@
-почистить код leftBar от проверок на особые айтемы (текст и тд)
 
+Remember if modal form pushed in history and pop history on closing of this modal
 
-Стилизовать табы вверху формы
+закомитить все и Проверить сохр енума заменив колбеки форм пустыми функциями.
 
 закомитить все и переименовать js папки в src на клиенте и сервере
-
-после сохранения не попает историю а добавляет в конец
 
 просить вход если ответ нет прав и юзер гость
 
