require login for guests if tried to access restricted section

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,3 @@
-просить вход если ответ нет прав и юзер гость
 
 видимость полей в формах "раздел" и "поле" пересчет сделать попольно
 
@@ -23,6 +22,8 @@ Lookup nto1 and ntom to user gives access for user if field marked as access ope
 сделать деплой релизного билда.
 
 проверить обработку и показ ошибок в релизном билде клиента и бека.
+
+проверить просить вход если ответ нет прав и юзер гость  <access>
 
 портировать Linemaster
 
