noStoreFroms rename to storeForms
nodeType field added

fields icons

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,7 @@
+расставить иконки табам и полям по максимуму
 
-видимость полей в формах "раздел" и "поле" пересчет сделать попольно
+видимость полей в форме "поле" пересчет сделать попольно
+
 
 crop падает на прозрачной области. когда кроп больше картинки
 
