--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
-расставить иконки табам и полям по максимуму
 
 видимость полей в форме "поле" пересчет сделать попольно
+
+бекап формы при модалах ломатеся?
 
 
 crop падает на прозрачной области. когда кроп больше картинки
