form fields layout change. inline fields

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,8 @@
 
-видимость полей в форме "поле" пересчет сделать попольно
+бекап формы при модалах ломатеся.
+сохранять бекапы по предопределенным enforced полям
+перенести tryBackup в форму
 
-бекап формы при модалах ломатеся?
 
 
 crop падает на прозрачной области. когда кроп больше картинки
