splitter fields formItem > FormListItem Emuns unique validation sumforms debouncing before save

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,8 @@
 
+Remove compact area tab functionality
+
+сконвертить все в енумы
+
 бекап формы при модалах ломатеся.
 сохранять бекапы по предопределенным enforced полям
 перенести tryBackup в форму
