express on backend

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,7 @@
 
-сделать деплой релизного билда.
+сделать деплой релизного билда. версионность по папкам.
+
+в релизе настроить CDN заголовки кеша. апи на поддомене.
 
 проверить обработку и показ ошибок в релизном билде клиента и бека.
 
