--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,8 @@
-count transactions in userSession
+добавить ассерт на неснятый флаг транщакции?
+
+Who mofal back calls data refresh in list
+Why hash refresh with clising form crashes. Clising form should remove entry?
+
 
 портировать Linemaster
 
