--- a/todo.txt
+++ b/todo.txt
@@ -1,21 +1,35 @@
-выбор фильтров с прочерком. Показывать по умолчанию 
 
-прокликать все кнопки меню.
+ 
+кастомные евент хендлеры в добавок имеющимся
+lm_drawings_onLoad lm_drawings_onAfterSave переместить в кастомные хендлеры
+
+
+Do not push same history items and pop history on login until non login reset remind item.
+
+ENV enforce login option
+
+save/load image from data
+
+login to save
+
+
+превью тянет в админку события мыши из рисовалки
 
 проверить сколько тянет в бандл рисовалки
 
+
+add custom gif cursors with disable option
+
+
 Prod and release bundles in same config?
 
-no inline css and dontawesome
+no inline css and fontawesome
+
 
 
 портировать Linemaster
 
 check png export
-
-кастомные Переводы.
-
-кастомные евент хендлеры в добавок имеющимся
 
 проверить обработку и показ ошибок в релизном билде клиента и бека.
 
