--- a/todo.txt
+++ b/todo.txt
@@ -1,18 +1,19 @@
-
+проверить регистрацию по email
 
 проверить обработку и показ ошибок в релизном билде клиента и бека.
 
 проверить просить вход если ответ нет прав и юзер гость  <access>
 
-проверить логин гугла
+
+JKGhquiwsdguiUyg8*&12gh
 
 
+hide left menu if one non section item only
 
 check if guest try to upliad file or image to prevent sessions collizion
 
 go to core/ custom event handler by ENV option
 
-hide left menu if one non section item only
 
 ENV enforce login option
 
