--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,13 @@
 проверить регистрацию по email
 
+Попробовать регистрацию из окна рисунка.
+
 проверить обработку и показ ошибок в релизном билде клиента и бека.
 
 проверить просить вход если ответ нет прав и юзер гость  <access>
 
+Add viewport x2 for mobile?
 
-JKGhquiwsdguiUyg8*&12gh
 
 
 hide left menu if one non section item only
